fixed overflow

--- a/src/sass/_media-queries.scss
+++ b/src/sass/_media-queries.scss
@@ -1,6 +1,13 @@
+$small-phone-width: 400px;
 $phone-width: 500px;
 $tablet-width: 768px;
 $desktop-width: 1024px;
+
+@mixin small-phone {
+  @media only screen and (max-width: #{$phone-width}) {
+    @content;
+  }
+}
 
 @mixin phone {
     @media only screen and (max-width: #{$phone-width}) {
